--- a/style.css
+++ b/style.css
@@ -4,25 +4,26 @@ body {
   font-family: Helvetica, arial, freesans, clean, sans-serif;
   font-size: 14px;
   max-width: 840px;
+  background-color: white;
 }
 
 h1 {
-	font-size: 200%;
-	font-weight: bold;
-	margin-bottom: 0.2em;
+  font-size: 200%;
+  font-weight: bold;
+  margin-bottom: 0.2em;
 }
 
 h2 {
-	font-size: 160%;
-	font-weight: bold;
-	margin-bottom: 0.2em;
-	text-align: center;
+  font-size: 160%;
+  font-weight: bold;
+  margin-bottom: 0.2em;
+  text-align: center;
 }
 
 p, ul, ol {
-	margin-top: 0;
-	line-height: 150%;
-	text-align: center;
+  margin-top: 0;
+  line-height: 150%;
+  text-align: center;
 }
 
 a {
